components/microservice1/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice1
spec:
  template:
    spec:
      containers:
      - name: microservice1
        image: nginx:stable
        volumeMounts:
          - name: nginx-config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        ports:
          - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
      volumes:
        - name: nginx-config-volume
          configMap:
            name: microservice1-nginx-config
