components/microservice1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservice1
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
