components/microservice1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /microservice
          pathType: Prefix
          backend:
            service:
              name: microservice-service
              port:
                number: 8000
